# geometry_skirmishes

./: .gitignore  CMakeLists.txt  main.cpp
src/common/: Color.cpp  Color.hpp  Random.hpp  Types.hpp
src/core/: DebugUI.cpp  DebugUI.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.h  InputState.hpp  Physics.hpp  Renderer.cpp  Renderer.hpp
src/entities/: Component.hpp  Entity.hpp  EntityTag.hpp
src/math/: Vector.hpp
src/random/: Random.hpp  RandomGenerator.cpp
src/systems/: InputSystem.cpp  InputSystem.hpp  Renderer.cpp  Renderer.hpp
